<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/txtpagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_order_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtenterid"
        />

    <TextView
        android:id="@+id/txtenterid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_order_id"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/EdiStatus"
        app:layout_constraintTop_toBottomOf="@id/txtpagename"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/EdiStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_order_number"
        android:textSize="20sp"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintTop_toBottomOf="@id/txtenterid"
        app:layout_constraintBottom_toTopOf="@id/txtEnStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="MissingConstraints,SmallSp,TextViewEdits"
        />

    <TextView
        android:id="@+id/txtEnStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/enter_order_statuss"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ediOrderstatus"
        app:layout_constraintTop_toBottomOf="@id/EdiStatus"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/ediOrderstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/enter_order_status"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnDone"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEnStatus"
        tools:ignore="MissingConstraints,SmallSp,TextViewEdits,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/nextbtn"
        android:textColor="#263238"
        app:layout_constraintEnd_toStartOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ediOrderstatus"
        tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/back"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDone"
        app:layout_constraintTop_toBottomOf="@id/ediOrderstatus"

        />
</androidx.constraintlayout.widget.ConstraintLayout>